@@ -1,3 +1,7 @@
+2000-11-10  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Decayable/nondecayable bodies.
+
 2000-11-09  Tristan Tarrant <nadir@users.sourceforge.net>
 
 	* exult.cc: try harder to find 'exult.flx'.
